...
  const {isOnboard, setOnboard}: any = useAppStore(state => state);

  // const dispatch = useAppDispatch();

  const onPressButton = async (state: boolean) => {
    if (state) {
      resetNavigation('HomeScreen', null);
      setOnboard(true);
    } else {
      currentIndex.value = 1;
      setIsClickNext(true);
    }
  };
...
        <Animated.View style={[styles.sliderStyle, animateView1Style]} />
        <Animated.View style={[styles.sliderStyle, animateView2Style]} />
      </View>
      <TouchableOpacity
        onPress={() => onPressButton(isClickNext)}
        style={styles.button}
        testID="next-button">
        <ArrowRight />
      </TouchableOpacity>
    </View>
  );
};

...
